# revit

./: -  .dockerignore  .env.example  .fireai_benchmark_baseline.json  .git-commit-msg  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ruffignore  .secrets.baseline  .vercelignore  404.html  <_io.BytesIO object at 0x7f1802c31080>  AGENTS.md  API_Test_Collection.postman_collection.json  ARCHITECTURE.md  ARCHITECTURE_FREEZE.md  ARCHITECTURE_ML_ADDENDUM.md  BIM_MULTI_DB_EXAMPLE.py  CAD_BIM_API_INTEGRATION_GUIDE.md  CHANGELOG.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  CONFIGURATION_GUIDE.md  CONSULTANT_REVIEW_MASTER_REPORT.md  CONTRIBUTING.md  CONTRIBUTING_AI.md  CONVERSATION_SUMMARY.md  COVERAGE_REPORT.md  DEMO_SCRIPT.md  DEPLOYMENT_GUIDE.md  DEPLOY_FIX_V230.md  DEVELOPMENT.md  DEV_SESSION.md  Dockerfile  ELECTRON_SECURITY_REPORT.md  ELITE_DRAWING_ANALYZER_SPEC.md  ENGINEERING_BASIS.md  ENGINEERING_REVIEW_REQUIRED.md  (+233 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  act-history.json  dependabot.yml  repo-cleanup-plan.md
.playwright-mcp/: page-2026-07-14T21-27-32-099Z.yml
SAMPLE_OUTPUTS/: demo_cctv.txt  demo_firealarm.txt  demo_firealarm_boq.txt  demo_pa.txt
adapters/: __init__.py  autocad_adapter.py  pdf_to_rooms_adapter.py  revit_adapter.py
agent-ctx/: international-severe-weather-agent.md
alembic/: env.py
assets/: index-DeUH5xqE.js  index-edVjpt3x.css  vendor-i18n-CwmeDqzi.js  vendor-react-DvpPJ1O8.js  vendor-tanstack-DEclerMY.js  vendor-ui-BXJM0bga.js
audit/: audit_Test3_20260513_123045.json  audit_Test3_20260513_123505.json  audit_Test3_20260513_123549.json  audit_Test3_20260513_125833.json  audit_Test3_20260513_130412.json  audit_Test3_20260513_130452.json  audit_Test3_20260513_131426.json  audit_Test3_20260513_131903.json  audit_Test3_20260513_154340.json  audit_Test3_20260513_160734.json  audit_Test3_20260523_205413.json  audit_Test3_20260523_205636.json  audit_Test3_20260523_205640.json  audit_Test3_20260523_205652.json  audit_Test3_20260523_213751.json  audit_Test3_20260523_213845.json  audit_Test3_20260523_214648.json  audit_Test3_20260523_214753.json  audit_Test3_20260523_215714.json  audit_Test3_20260523_220153.json  audit_Test3_20260523_220934.json  audit_Test3_20260523_221455.json  audit_Test3_20260524_135105.json  audit_Test3_20260525_152827.json  audit_Test_20260513_123045.json  audit_Test_20260513_123549.json  audit_Test_20260513_123559.json  audit_Test_20260513_125622.json  audit_Test_20260513_125623.json  audit_Test_20260513_125832.json  audit_Test_20260513_130411.json  audit_Test_20260513_130412.json  audit_Test_20260513_130451.json  audit_Test_20260513_130904.json  audit_Test_20260513_131135.json  audit_Test_20260513_131355.json  audit_Test_20260513_131358.json  audit_Test_20260513_131418.json  audit_Test_20260513_131421.json  audit_Test_20260513_131427.json  (+101 more)
autocad_addin/: PackageContents.xml
backend/: API_ENDPOINTS_INDEX.md  __init__.py  admin_protection.py  akamai_middleware.py  api_keys.py  app.py  audit_integrity_helper.py  auth.py  cache.py  cloudflare_middleware.py  config.py  contract.py  csp.py  database.py  db_models.py  db_service.py  limiter.py  models.py  multi_db_service.py  project_bridge.py  rbac.py  request_context.py  response.py  schema_base.py  schemas.py  security_csrf.py  security_middleware.py  session_secret.py  session_store.py  vision_key_store.py  websocket.py  worker.py
backup/: auto_placement.py  nfpa72_calculations.py  nfpa72_coverage.py
bash_events/: 20260509175512_BashCommand_7a6fab9093fe4a9bbc5917cfec17f55c  20260509175512_BashOutput_7a6fab9093fe4a9bbc5917cfec17f55c_9de86a84364b49a494f2424f81c00735  20260509175513_BashCommand_3a99d3f507d0425bad2eeda1d02c352b  20260509175513_BashCommand_b1545c06d2cd4c0c99cbf474d370a8ce  20260509175513_BashCommand_b15f12db83e6466fbd97c7bec56d2a60  20260509175513_BashCommand_f1a3a87672804ffaa93f43cdfff0b773  20260509175513_BashOutput_3a99d3f507d0425bad2eeda1d02c352b_195eb82a310b426680f0bb64c0a18549  20260509175513_BashOutput_b1545c06d2cd4c0c99cbf474d370a8ce_43dfb29c38fc48a7bdb4a4e37618f9ac  20260509175513_BashOutput_b15f12db83e6466fbd97c7bec56d2a60_819f005e2aca4fefbc60bd2f29711d5c  20260509175513_BashOutput_f1a3a87672804ffaa93f43cdfff0b773_c30f065051fd4cfe9a606d1530fca7cd
bridges/: __init__.py  digital_twin_bridge.py  orchestrator.py  output_bridge.py  parser_bridge.py  report_bridge.py
core/: __init__.py  adaptive_solver.py  code_compliance_engine.py  cognitive_core.py  cognitive_kernel.py  conflict_resolver.py  contract.py  database.py  electrical_ceiling_analyzer.py  engineering_router.py  exceptions.py  fireai_core.py  fireai_db_reporting.py  floor_orchestrator.py  geometry_kernel.py  ifc_utils.py  kernel_simple.py  models.py  multi_floor_analyzer.py  pdf_report.py  production_config.py  retry.py  room_classifier.py  safety_gates.py  sync_engine.py  truth_deriver.py  truth_model.py
db/: api_keys.json  udm_elements.db-shm  udm_elements.db-wal
deploy/: POST_INSTALL.md
docs/: AKAMAI_DEPLOYMENT_GUIDE.md  AKAMAI_INCIDENT_RESPONSE.md  AKAMAI_MONITORING.md  AKAMAI_PROTECTION_PLAN.md  AKAMAI_TESTING_CHECKLIST.md  API.md  API_KEYS_GUIDE.md  ARCHITECTURE_CHANGE_PROPOSAL_V2.md  ARCHITECTURE_REMEDIATION_COMPLETION_REPORT.md  BACKUP_RECOVERY.md  CFL_SPECIFICATION.md  CLOUDFLARE_COMPLETE_ARCHITECTURE.md  CLOUDFLARE_PROTECTION_SETUP.md  CONFIGURATION.md  DECISION_LOG.md  (+52 more)
upload/elite_v2/elite_platform_v2/: README.md  pyproject.toml
upload/elite_v2/elite_platform_v2/artifacts/: demo_output_v2.json  elite_v2.db  elite_v2_8d9101cb.db  elite_v2_eec2a4cc.db
upload/elite_v2/elite_platform_v2/demo/: run_demo.py
upload/elite_v2/elite_platform_v2/src/elite_platform_v2/: __init__.py  canonical_json.py  contracts.py  evidence_chain.py  geometry.py  placement.py  release_gates.py  twin_db.py
upload/elite_v2/elite_platform_v2/src/elite_platform_v2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
upload/elite_v2/elite_platform_v2/tests/: test_v2.py
(+2175 files in other folders)
