[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fireai"
version = "1.55.0"  # P0.3: static version from VERSION file (was dynamic via setuptools_scm, which fails in Docker builder without git history)
description = "FireAI — Safety-Critical Fire Protection Engineering Platform (NFPA 72-2022)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "FireAI Project", email = "contact@fireai.org"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed"
]
keywords = ["fireai", "fire-alarm", "nfpa72", "bim", "revit", "autocad", "digital-twin", "engineering", "safety-critical"]
dependencies = [
    # ── Web framework ────────────────────────────────────────────────────
    "fastapi>=0.100.0,<1.0.0",
    "uvicorn[standard]>=0.20.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "websockets>=10.0.0,<13.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    # ── Data models / validation ─────────────────────────────────────────
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    # ── Database ─────────────────────────────────────────────────────────
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "alembic>=1.10.0,<2.0.0",
    "asyncpg>=0.27.0,<1.0.0",
    # ── Rate limiting & security ─────────────────────────────────────────
    "slowapi>=0.1.9,<1.0.0",
    "pyjwt[crypto]>=2.6.0,<3.0.0",
    "passlib[bcrypt]>=1.7.0,<2.0.0",
    "cryptography>=41.0.0,<44.0.0",
    # ── Async task queue / cache ─────────────────────────────────────────
    "redis>=4.5.0,<5.0.0",
    "redis[hiredis]>=4.5.0,<5.0.0",
    "celery>=5.2.0,<6.0.0",
    # ── Utilities ────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0,<2.0.0",
    "requests>=2.28.0,<3.0.0",
    "python-dateutil>=2.8.0,<3.0.0",
    "pytz>=2023.0.0,<2025.0.0",
    "tenacity>=8.2.0,<10.0.0",
    "psutil>=5.9.0,<7.0.0",
    "click>=8.1.0,<9.0.0",
    # ── Scientific computing (used by NFPA 72 / spatial / coverage engines)
    "numpy>=1.24.0,<3.0.0",
    "scipy>=1.11.0,<2.0.0",
    "shapely>=2.0.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    # ── CAD/BIM parsers ─────────────────────────────────────────────────
    "ezdxf>=1.1.0,<2.0.0",
    "lxml>=4.9.0,<6.0.0",
    # ── PDF generation (mandatory for AHJ submittal packages) ───────────
    "reportlab>=4.0.0,<5.0.0",
    # ── PDF reading (mandatory for CAD/PDF drawing input) ───────────────
    "pymupdf>=1.23.0,<2.0.0",
    # ── Excel export (BOQ generator, submittal schedules) ───────────────
    "openpyxl>=3.1.0,<4.0.0",
    # ── Hypothesis testing (property-based, also used in production checks)
    "hypothesis>=6.82.0,<7.0.0",
    # ── Observability ───────────────────────────────────────────────────
    "prometheus-client>=0.17.0,<1.0.0",
    # ── Windows-only CAD integration ─────────────────────────────────────
    "pywin32>=306;platform_system=='Windows'",
    "pythonnet>=3.0.0rc1;platform_system=='Windows'",
]

[project.optional-dependencies]
# ── ML subsystem (XGBoost + Cox PH + SHAP) — advisory-only per NFPA 72 ──
# Install with: pip install .[ml]
ml = [
    "xgboost>=2.0.0,<3.0.0",
    "lightgbm>=4.0.0,<5.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "shap>=0.43.0,<1.0.0",
    "lime>=0.2.0,<1.0.0",
    "lifelines>=0.27.0,<1.0.0",
    "statsmodels>=0.14.0,<1.0.0",
    # Prophet is heavy (bundles cmdstanpy); comment if not needed.
    # "prophet>=1.1.4,<2.0.0",
]

# ── Distributed FACP / async messaging ─────────────────────────────────
# Install with: pip install .[distributed]
distributed = [
    "asyncio-mqtt>=0.10.0,<1.0.0",
]

# ── Deep learning (LSTM time-series model) — heavy, opt-in ─────────────
# Install with: pip install .[lstm]
lstm = [
    "torch>=2.0.0,<3.0.0",
]

# ── Computer vision (image-based fire/flame detection) ─────────────────
# Install with: pip install .[cv]
cv = [
    "opencv-python>=4.8.0,<5.0.0",
]

# ── LangGraph workflow engine (Mem0 + LangGraph integration) ───────────
# Install with: pip install .[workflow]
workflow = [
    "langgraph>=0.2.0,<1.0.0",
    "mem0ai>=0.1.0,<1.0.0",
]

# ── All optional integrations in one install ───────────────────────────
# Install with: pip install .[all]
all = [
    "fireai[ml,distributed,lstm,cv,workflow]",
]

# ── Development tooling ────────────────────────────────────────────────
# Install with: pip install .[dev]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<2.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "black>=23.0.0,<25.0.0",
    "flake8>=6.0.0,<8.0.0",
    "mypy>=1.0.0,<2.0.0",
    "ruff>=0.1.0,<1.0.0",
    "pre-commit>=3.0.0,<5.0.0",
    "bandit>=1.7.0,<2.0.0",
    "safety>=2.0.0,<4.0.0",
    "pip-audit>=2.6.0,<3.0.0",
    "pip-tools>=7.0.0,<8.0.0",
    "locust>=2.20.0,<3.0.0",
    "types-requests>=2.28.0,<3.0.0",
    "types-python-dateutil>=2.8.0,<3.0.0",
]

# ── Documentation ──────────────────────────────────────────────────────
# Install with: pip install .[docs]
docs = [
    "mkdocs>=1.4.0,<2.0.0",
    "mkdocs-material>=9.0.0,<10.0.0",
    "mkdocstrings[python]>=0.22.0,<1.0.0",
]

[project.scripts]
fireai-server = "fireai.cli:main"
fireai-cli = "fireai.cli:cli_main"

[project.urls]
Homepage = "https://github.com/ahmdelbaz28-ux/revit"
Documentation = "https://github.com/ahmdelbaz28-ux/revit#readme"
Repository = "https://github.com/ahmdelbaz28-ux/revit.git"
Changelog = "https://github.com/ahmdelbaz28-ux/revit/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/ahmdelbaz28-ux/revit/issues"

# ────────────────────────────────────────────────────────────────────────────
# P0.3: Setuptools package discovery — explicit include list.
# Previously, pyproject.toml had NO [tool.setuptools.packages.find] section,
# so `pip install .` produced an EMPTY wheel (7KB dist-info only, no .py
# files). This silently broke every Docker image and every clean-venv
# install. We now explicitly list the top-level packages to ship.
# ────────────────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = [
    "fireai*",
    "backend*",
    "parsers*",
    "qomn_fire*",
    "qomn_conduit*",
    "facp_system*",
    "facp_distributed*",
    "core*",
    "adapters*",
    "marine*",
    "integration*",
]
exclude = [
    "tests*",
    "docs*",
    "frontend*",
    "deploy*",
    "skills*",
    "*.tests*",
    "*.tests",
    "todo-app*",
    "revit_samples*",
    "revit_data*",
    "templates*",
    "test_data*",
    "cloud*",
    "nginx*",
    "traefik*",
    "alembic*",
    "qomn_conduit.tests*",
    "qomn_fire.tests*",
    "facp_distributed.tests*",
]

# Ship VERSION, README.md, LICENSE as package data
[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json", "*.yaml", "*.yml", "VERSION"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
show_error_codes = true
exclude = ["venv/", ".venv/", "env/", ".env/"]

[[tool.mypy.overrides]]
module = ["marine.tests.*"]
ignore_errors = true

[tool.pytest.ini_options]
# V130 FIX: Expanded testpaths from ["tests"] to include ALL test directories.
# Previously, 95 of 144 test_*.py files were silently skipped by default pytest
# invocation — including the entire safety-critical fireai/core/tests/ kernel
# (1131+ tests covering NFPA 72, voltage drop, battery sizing, audit chain).
testpaths = [
    "tests",
    "backend/tests",
    "fireai/conduit/tests",
    "fireai/core/tests",
    "parsers/tests",
    "qomn_conduit/tests",
    "qomn_fire/tests",
    "core/tests",
    "facp_distributed/tests",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "--disable-warnings",
    "--showlocals",
    "--verbose"
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "safety_critical: marks tests as safety-critical",
    "security: marks tests as security-related",
    "compliance: marks tests as compliance-related",
    "asyncio: marks tests as asyncio-related"
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore::ImportWarning",
    "ignore::PendingDeprecationWarning"
]
norecursedirs = [".git", "__pycache__", "venv", "env", "revit-main", "facp_distributed"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/env/*",
    "*/.env/*"
]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == '__main__':"
]
# V130 FIX: Enforce minimum coverage on critical paths so coverage cannot
# drop silently. 70% is a conservative floor — raise to 80% after the
# remediation plan in the audit report is completed.
fail_under = 70

[tool.bandit]
targets = ["fireai", "tests"]
exclude_dirs = [".git", "__pycache__", "venv", "env"]
skips = ["B101", "B102"]  # Skip "assert used" and "exec used" for testing purposes

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "SIM",   # flake8-simplify
    "PGH",   # pygrep-hooks
    "PL",    # pylint
    "PT",    # flake8-pytest-style
    "RUF",   # Ruff-specific rules
    "ANN",   # typing: Any, NoReturn, etc.
    "BLE",   # boolean expression length
    "RET",   # return statement practices
    "D",     # pydocstyle
]
# Pre-existing violations to fix incrementally.
# These are tracked in the v1.0.0 roadmap — do NOT add new code that triggers them.
ignore = [
    "PLR",    # Design related pylint codes (too many args, etc.)
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top of file
    "E722",   # Do not use bare except
    "E741",   # Ambiguous variable name
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",  # Missing docstrings
    "D205", "D212", "D400", "D415",  # Docstring formatting
    "ANN101", "ANN102", "ANN201", "ANN202", "ANN204", "ANN206",  # Missing type annotations
    "ANN401",  # Dynamically typed expressions (Any)
    "B904",    # raise from err (should fix but pre-existing)
    "BLE001",  # Blind exception (should fix but pre-existing)
    "SIM105",  # contextlib.suppress (should fix but pre-existing)
    "SIM102",  # Nested if (should fix but pre-existing)
    "UP015",   # Unnecessary mode argument
    "UP037",   # Remove quotes from type annotation
    "UP045",   # Use X | None (should fix but pre-existing)
    "RUF003",  # Ambiguous unicode character
    "RUF005",  # Collection literal concatenation
    "N806",    # Variable in function should be lowercase (ML convention: X_train)
    "N818",    # Exception name should end with Error
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "core", "parsers", "fireai", "skills", "qomn_conduit", "db", "tests", "facp"]
known-third-party = ["fastapi", "uvicorn", "pydantic", "sqlalchemy", "alembic", "requests", "pyjwt", "passlib", "cryptography", "websockets", "asyncpg", "redis", "celery", "python_dateutil", "pytz", "pywin32", "pythonnet", "tenacity", "hypothesis", "pytest", "black", "flake8", "mypy", "ruff", "pre_commit", "bandit", "safety", "types_requests", "types_python_dateutil", "mkdocs", "mkdocs_material", "mkdocstrings", "numpy", "scipy", "shapely", "pandas", "matplotlib", "ezdxf", "lxml", "aiohttp", "click", "psutil", "prometheus_client", "xgboost", "lightgbm", "sklearn", "shap", "lime", "lifelines", "statsmodels", "langgraph", "mem0ai", "cv2"]
